Remove dropdown on pagination collapse and fix pagination collapse logic

--- a/static/public/css/index.css
+++ b/static/public/css/index.css
@@ -1297,7 +1297,7 @@ h3 {
   align-items: center;
 }
 
-.page-link,  .page-link-collapse {
+.page-link {
   position: relative;
   display: block;
   height: 100%;
@@ -1321,19 +1321,19 @@ h3 {
   transition-duration: 150ms;
 }
 
-.page-link:hover,  .page-link-collapse:hover {
+.page-link:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(226 232 240 / var(--tw-bg-opacity));
   -webkit-text-decoration-line: none;
           text-decoration-line: none;
 }
 
-.page-link:active,  .page-link-collapse:active {
+.page-link:active {
   --tw-bg-opacity: 1;
   background-color: rgb(203 213 225 / var(--tw-bg-opacity));
 }
 
-.dark .page-link, .dark  .page-link-collapse {
+.dark .page-link {
   --tw-border-opacity: 1;
   border-color: rgb(82 82 91 / var(--tw-border-opacity));
   --tw-bg-opacity: 1;
@@ -1342,18 +1342,18 @@ h3 {
   color: rgb(228 228 231 / var(--tw-text-opacity));
 }
 
-.dark .page-link:hover, .dark  .page-link-collapse:hover {
+.dark .page-link:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(82 82 91 / var(--tw-bg-opacity));
 }
 
-.dark .page-link:active, .dark  .page-link-collapse:active {
+.dark .page-link:active {
   --tw-bg-opacity: 1;
   background-color: rgb(161 161 170 / var(--tw-bg-opacity));
 }
 
 @media (min-width: 768px) {
-  .page-link,  .page-link-collapse {
+  .page-link {
     padding-left: 0.75rem;
     padding-right: 0.75rem;
     padding-top: 0.75rem;
@@ -1364,7 +1364,65 @@ h3 {
 }
 
 @media (min-width: 1024px) {
-  .page-link,  .page-link-collapse {
+  .page-link {
+    padding-left: 1rem;
+    padding-right: 1rem;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+}
+
+.page-link-collapse {
+  position: relative;
+  display: block;
+  height: 100%;
+  width: 100%;
+  cursor: default;
+  align-items: center;
+  border-width: 1px;
+  --tw-border-opacity: 1;
+  border-color: rgb(226 232 240 / var(--tw-border-opacity));
+  --tw-bg-opacity: 1;
+  background-color: rgb(248 250 252 / var(--tw-bg-opacity));
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  font-size: 0.75rem;
+  line-height: 1rem;
+  --tw-text-opacity: 1;
+  color: rgb(71 85 105 / var(--tw-text-opacity));
+}
+
+.page-link-collapse:hover {
+  -webkit-text-decoration-line: none;
+          text-decoration-line: none;
+}
+
+.dark .page-link-collapse {
+  --tw-border-opacity: 1;
+  border-color: rgb(82 82 91 / var(--tw-border-opacity));
+  --tw-bg-opacity: 1;
+  background-color: rgb(63 63 70 / var(--tw-bg-opacity));
+  --tw-text-opacity: 1;
+  color: rgb(228 228 231 / var(--tw-text-opacity));
+}
+
+@media (min-width: 768px) {
+  .page-link-collapse {
+    padding-left: 0.75rem;
+    padding-right: 0.75rem;
+    padding-top: 0.75rem;
+    padding-bottom: 0.75rem;
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
+}
+
+@media (min-width: 1024px) {
+  .page-link-collapse {
     padding-left: 1rem;
     padding-right: 1rem;
     padding-top: 1rem;
